--- a/documentation/docs/persistence/services.mdx
+++ b/documentation/docs/persistence/services.mdx
@@ -11,6 +11,7 @@ The following ORMs are supported out of the box.
 * [TypeOrm](./typeorm/getting-started.md)
 * [Sequelize](./sequelize/getting-started.md)
 * [Mongoose](./mongoose/getting-started.md)
+* [Typegoose](./typegoose/getting-started.md)
 
 `@nestjs-query/core` also provides a number of base `QueryService`s that can be used to create custom query services.
  [See the Services docs](../concepts/services.md#service-helpers)
