Fixed typo in hooks doc
Typo fixed.

--- a/documentation/docs/graphql/hooks.mdx
+++ b/documentation/docs/graphql/hooks.mdx
@@ -13,7 +13,7 @@ title: Hooks
 * `@BeforeDeleteOne` - invoked before any `deleteOne` mutation.
 * `@BeforeDeleteMany` - invoked before any `deleteMany` mutation.
 
-Each hook is low touch implementation intended to allow modifying incoming requests. The are not
+Each hook is low touch implementation intended to allow modifying incoming requests. They are not
 intended to replace `pipes`, `guards` or `interceptors`.
 
 ## Usage
