docs: Added missing comma in 0.22.x to 0.23.x

--- a/documentation/docs/migration-guides/v0.22.x-to-v0.23.x.mdx
+++ b/documentation/docs/migration-guides/v0.22.x-to-v0.23.x.mdx
@@ -350,7 +350,7 @@ import { TodoItemEntity } from './todo-item.entity';
 import { TodoItemResolver } from './todo-item.resolver'
 
 @Module({
-  providers: [TodoItemResolver]
+  providers: [TodoItemResolver],
   imports: [
     NestjsQueryGraphQLModule.forFeature({
       imports: [NestjsQueryTypeOrmModule.forFeature([TodoItemEntity])],
